# tavexx-react

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
finance/finance/: settings.py  urls.py
finance/main/: models.py  serializers.py  views.py
finance/main/migrations/: 0001_initial.py
scripts/: dev-server.sh
